--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,16 +4,57 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        h6 {
+            font-size: 15px
+        }
+
         .h2-text {
             color: red
         }
+
+        .h6-text {
+            color: yellow
+        }
+
+        #h1-text {
+            font-size: 50px
+        }
+
+        div.python > a {
+            color: green
+        }
+
+        ul li {
+            color: green
+        }
+
+        input[type="text"] {
+            background-color: blue
+        }
+
+        input[type="text"]:hover {
+            background-color: green
+        }
+
+        a:hover {
+            color: red
+        }
+
+        li::marker {
+            color: red
+        }
+
+        ul > li:nth-child(2) {
+            color: blue
+        }
+
     </style>
 </head>
 <body>
-<div>
+<div class="python">
     <h1 id="h1-text">H1 text</h1>
     <h2 class="h2-text">H2 text</h2>
-    <h6 class="h2-text">H6 text</h6>
+    <h6 class="h2-text h6-text">H6 text</h6>
     <p>
         Native mobile emulation of Google Chrome for Android and Mobile Safari. The same rendering engine works on your Desktop and in the Cloud.
     </p>
@@ -57,6 +98,9 @@
         </tr>
         </tbody>
     </table>
+</div>
+<div class="javascript">
+    <a href="https://playwright.dev/python/" target="_blank">JavaScript</a>
 </div>
 </body>
 </html>
